added JasminSMS gatway as a notification option
--it contains custom parameters but they are optional and this works with the Official JasminSMS gateway
